# SlicerDentalModelSeg

./: .gitignore  CMakeLists.txt  LICENSE  env.json  readme.md
CrownSegmentation/: .~lock.list_file.csv#  CMakeLists.txt  CrownSegmentation.py  list_file.csv
CrownSegmentation/Resources/UI/: CrownSegmentation.ui
CrownSegmentationcli/: CMakeLists.txt  CrownSegmentationcli.py  CrownSegmentationcli.xml  _CMakeLists.txt
CrownSegmentationcli/_CrownSegmentationcli/: LinearSubdivisionFilter.py  post_process.py  utils.py
CrownSegmentationcli/__CrownSegmentation/: LinearSubdivisionFilter.py  __init__.py  dataset.py  net.py  post_process.py  readers.py  utils.py
CrownSegmentationcli/utils_windows/: first.py  in_wsl.py  server.py
prediction/: CMakeLists.txt  prediction.py
prediction/Resources/UI/: prediction.ui
predictioncli/: predictioncli.py  predictioncli.xml
seg_code/: fly_by_features.py  post_process.py  utils.py
seg_code/FiboSeg/: predict_v3.py
